--- a/port/index4.html
+++ b/port/index4.html
@@ -18,28 +18,37 @@
 <body>
     <div class="cursor"></div>
     <!-- //cursor -->
-
-    <header id="header">
-        <div class="container">
-            <div class="header">
-                <div class="header-title">
-                    <h1>
-                        you can see hj's<br>
-                        <div>portfolio</div>
-                    </h1>
-                    <h2><span>Thinking</span> = Thinking + Thinking</h2>
-                </div>
-                <div class="header-desc">
-                    안녕하세요. 이현진입니다.<br>
-                    <strong>생각을 거듭할수록</strong>(<strong>Thinking</strong> = Thinking + Thinking) 한계가 없는 세상을 만드는 퍼블리셔에 빠지게됐습니다.<br>
-                    덕분에 제 자신도 마치 <strong>한계 없이 발전</strong>하는 것처럼 느껴졌습니다.<br>
-                    물론, 한계가 없으니 끝없이 노력해야하는 힘든 직업이지만, <strong>성취감</strong> 또한 <strong>무한</strong>하니 굉장히 가치있다고 생각합니다.<br>
-                    저의 생각을 거듭한 결과, <strong>지금부터 시작</strong>합니다.
+    <div id="contents">
+        <header id="header">
+            <div class="container">
+                <div class="row">
+                    <div class="header">
+                        <div class="header-title">
+                            <h1 class="main-tit"><strong class="split">You can see dreams</strong> <em class="split">in my portfolio</em></h1>
+                            <p class="sub-tit split">Thinking= Thinking + Thinking</p>
+                            <p class="desc">
+                                안녕하세요. 이현진입니다.<br>
+                                <strong>생각을 거듭할수록</strong>(<strong>Thinking</strong> = Thinking + Thinking) 한계가 없는 세상을 만드는 퍼블리셔에 빠지게됐습니다.<br>
+                                덕분에 제 자신도 마치 <strong>한계 없이 발전</strong>하는 것처럼 느껴졌습니다.<br>
+                                물론, 한계가 없으니 끝없이 노력해야하는 힘든 직업이지만, 성취감 또한 무한하니 굉장히 가치있다고 생각합니다.<br>
+                                저의 생각을 거듭한 결과, 지금부터 시작합니다.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </header>
-    <!-- //header -->
+        </header>
+        <!-- //header -->
+
+        <section id="section1"></section><!-- //section1 -->
+        <section id="section2"></section><!-- //section2 -->
+        <section id="section3"></section><!-- //section3 -->
+        <section id="section4"></section><!-- //section4 -->
+        <section id="section5"></section><!-- //section5 -->
+        <section id="section6"></section><!-- //section6 -->
+        <section id="section7"></section><!-- //section7 -->
+    </div>
+    
 
     <!-- script -->
     <script src="js/jquery.min_1.12.4.js"></script>
