--- a/port/index4.html
+++ b/port/index4.html
@@ -114,87 +114,90 @@
                         <a href="https://www.figma.com/proto/knnrHvG9ZKTt33OSGKBC3h/webstandard?node-id=1%3A2&viewport=610%2C485%2C0.05899874493479729&scaling=contain" target="blank">view figma</a>
                     </div>
                 </div>
-                <div class="circlebox">
-                    <a class="sec1-circleAll circle-wrap1 active2" href="#">
-                        <div class="sec1-circle1">view tap-move</div>
-                    </a>
-                    <a class="sec1-circleAll circle-wrap2" href="#">
-                        <div class="sec1-circle2">view image-sprite</div>
-                    </a>
-                    <a class="sec1-circleAll circle-wrap3" href="#">
-                        <div class="sec1-circle3">view slick</div>
-                    </a>
-                    <a class="sec1-circleAll circle-wrap4" href="#">
-                        <div class="sec1-circle4">view lightbox</div>
-                    </a>
-                </div>
-                <div class="left-chromebox">
-                    <div class="left-chromewrap">
-                        <div class="menu-bar">
-                            <div class="circle-bar">
-                                <div class="red"></div>
-                                <div class="yellow"></div>
-                                <div class="green"></div>
+                
+                <div class="container sec1-container">
+                    <div class="circlebox">
+                        <a class="sec1-circleAll circle-wrap1 active2" href="#">
+                            <div class="sec1-circle1">view tap-move</div>
+                        </a>
+                        <a class="sec1-circleAll circle-wrap2" href="#">
+                            <div class="sec1-circle2">view image-sprite</div>
+                        </a>
+                        <a class="sec1-circleAll circle-wrap3" href="#">
+                            <div class="sec1-circle3">view slick</div>
+                        </a>
+                        <a class="sec1-circleAll circle-wrap4" href="#">
+                            <div class="sec1-circle4">view lightbox</div>
+                        </a>
+                    </div>
+                    <div class="left-chromebox">
+                        <div class="left-chromewrap">
+                            <div class="menu-bar">
+                                <div class="circle-bar">
+                                    <div class="red"></div>
+                                    <div class="yellow"></div>
+                                    <div class="green"></div>
+                                </div>
+                                <div class="sec1-title-bar title-bar">
+                                    <div class="tap htmlTap">
+                                        <a class="target active" href="#">HTML</a>
+                                        <div class="code-content">
+                                            <pre class="line-numbers"><code class="language-html lh1"></code></pre>
+                                        </div>
+                                    </div>
+                                    <div class="tap cssTap">
+                                        <a class="target" href="#">CSS</a>
+                                        <div class="code-content">
+                                            <pre class="line-numbers"><code class="language-css lc1"></code></pre>
+                                        </div>
+                                    </div>
+                                    <!-- <div class="tap scriptTap">
+                                        <a class="target" href="#">SCRIPT</a>
+                                        <div class="code-content">
+                                            <pre class="line-numbers"><code class="language-js lj1"></code></pre>
+                                        </div>
+                                    </div> -->
+                                </div>
                             </div>
-                            <div class="sec1-title-bar title-bar">
-                                <div class="tap htmlTap">
-                                    <a class="target active" href="#">HTML</a>
-                                    <div class="code-content">
-                                        <pre class="line-numbers"><code class="language-html lh1"></code></pre>
-                                    </div>
-                                </div>
-                                <div class="tap cssTap">
-                                    <a class="target" href="#">CSS</a>
-                                    <div class="code-content">
-                                        <pre class="line-numbers"><code class="language-css lc1"></code></pre>
-                                    </div>
-                                </div>
-                                <!-- <div class="tap scriptTap">
-                                    <a class="target" href="#">SCRIPT</a>
-                                    <div class="code-content">
-                                        <pre class="line-numbers"><code class="language-js lj1"></code></pre>
-                                    </div>
-                                </div> -->
-                            </div>
-                        </div>
-                        <div class="menu-content">
-                            <div class="option-bar">
-                                <div class="arrow-box">
-                                    <div class="arrowL">
-                                        <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.28487 0.817998C7.57523 1.1134 7.57115 1.58825 7.27575 1.87862L3.0829 6H12.75C13.1642 6 13.5 6.33579 13.5 6.75C13.5 7.16421 13.1642 7.5 12.75 7.5H3.09051L7.2742 11.5886C7.57044 11.8781 7.5759 12.353 7.28639 12.6492C6.99688 12.9454 6.52204 12.9509 6.2258 12.6614L0.7258 7.28639C0.581673 7.14554 0.500293 6.95261 0.500001 6.75109C0.499709 6.54956 0.580529 6.3564 0.724248 6.21513L6.22425 0.808881C6.51965 0.518516 6.9945 0.522598 7.28487 0.817998Z" fill="#F1F3F4"/>
-                                        </svg>
-                                    </div>
-                                    <div class="arrowR">
-                                        <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M6.71513 0.817998C6.42477 1.1134 6.42885 1.58825 6.72425 1.87862L10.9171 6H1.25C0.835787 6 0.5 6.33579 0.5 6.75C0.5 7.16421 0.835787 7.5 1.25 7.5H10.9095L6.7258 11.5886C6.42956 11.8781 6.4241 12.353 6.71361 12.6492C7.00312 12.9454 7.47796 12.9509 7.7742 12.6614L13.2742 7.28639C13.4183 7.14554 13.4997 6.95261 13.5 6.75109C13.5003 6.54956 13.4195 6.3564 13.2758 6.21513L7.77575 0.808881C7.48035 0.518516 7.0055 0.522598 6.71513 0.817998Z" fill="#86888A"/>
-                                        </svg>
-                                    </div>
-                                    <div class="redo">
-                                        <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M2 7C2 4.23858 4.23858 2 7 2C8.50726 2 9.85943 2.6667 10.7768 3.7232L8.5 6H14V0.5L11.8394 2.66063C10.65 1.33512 8.9228 0.5 7 0.5C3.41015 0.5 0.5 3.41015 0.5 7C0.5 10.5899 3.41015 13.5 7 13.5C9.57814 13.5 11.8042 11.999 12.8547 9.8265C13.0351 9.45359 12.8789 9.00512 12.506 8.8248C12.1331 8.64448 11.6847 8.8006 11.5043 9.1735C10.6947 10.8478 8.9812 12 7 12C4.23858 12 2 9.76142 2 7Z" fill="#F1F3F4"/>
-                                        </svg>
-                                    </div>
-                                </div>
-                                <div class="address-box">
-                                    <div class="address">
-                                        <span>
-                                            <svg width="8" height="11" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path fill-rule="evenodd" clip-rule="evenodd" d="M4 0C2.61929 0 1.5 1.11929 1.5 2.5V3.5H1C0.447715 3.5 0 3.94772 0 4.5V9.5C0 10.0523 0.447715 10.5 1 10.5H7C7.55228 10.5 8 10.0523 8 9.5V4.5C8 3.94772 7.55228 3.5 7 3.5H6.5V2.5C6.5 1.11929 5.38071 0 4 0ZM5.5 3.5V2.5C5.5 1.67157 4.82843 1 4 1C3.17157 1 2.5 1.67157 2.5 2.5V3.5H5.5Z" fill="#EAEAEA"/>
+                            <div class="menu-content">
+                                <div class="option-bar">
+                                    <div class="arrow-box">
+                                        <div class="arrowL">
+                                            <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd" clip-rule="evenodd" d="M7.28487 0.817998C7.57523 1.1134 7.57115 1.58825 7.27575 1.87862L3.0829 6H12.75C13.1642 6 13.5 6.33579 13.5 6.75C13.5 7.16421 13.1642 7.5 12.75 7.5H3.09051L7.2742 11.5886C7.57044 11.8781 7.5759 12.353 7.28639 12.6492C6.99688 12.9454 6.52204 12.9509 6.2258 12.6614L0.7258 7.28639C0.581673 7.14554 0.500293 6.95261 0.500001 6.75109C0.499709 6.54956 0.580529 6.3564 0.724248 6.21513L6.22425 0.808881C6.51965 0.518516 6.9945 0.522598 7.28487 0.817998Z" fill="#F1F3F4"/>
                                             </svg>
-                                        </span>
-                                        <div class="address-target show">hyunjin912.github.io/portfolio/index.html</div>
-                                        <div class="address-target">hyunjin912.github.io/portfolio/index.css</div>
-                                        <div class="address-target">hyunjin912.github.io/portfolio/index.script</div>
+                                        </div>
+                                        <div class="arrowR">
+                                            <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd" clip-rule="evenodd" d="M6.71513 0.817998C6.42477 1.1134 6.42885 1.58825 6.72425 1.87862L10.9171 6H1.25C0.835787 6 0.5 6.33579 0.5 6.75C0.5 7.16421 0.835787 7.5 1.25 7.5H10.9095L6.7258 11.5886C6.42956 11.8781 6.4241 12.353 6.71361 12.6492C7.00312 12.9454 7.47796 12.9509 7.7742 12.6614L13.2742 7.28639C13.4183 7.14554 13.4997 6.95261 13.5 6.75109C13.5003 6.54956 13.4195 6.3564 13.2758 6.21513L7.77575 0.808881C7.48035 0.518516 7.0055 0.522598 6.71513 0.817998Z" fill="#86888A"/>
+                                            </svg>
+                                        </div>
+                                        <div class="redo">
+                                            <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M2 7C2 4.23858 4.23858 2 7 2C8.50726 2 9.85943 2.6667 10.7768 3.7232L8.5 6H14V0.5L11.8394 2.66063C10.65 1.33512 8.9228 0.5 7 0.5C3.41015 0.5 0.5 3.41015 0.5 7C0.5 10.5899 3.41015 13.5 7 13.5C9.57814 13.5 11.8042 11.999 12.8547 9.8265C13.0351 9.45359 12.8789 9.00512 12.506 8.8248C12.1331 8.64448 11.6847 8.8006 11.5043 9.1735C10.6947 10.8478 8.9812 12 7 12C4.23858 12 2 9.76142 2 7Z" fill="#F1F3F4"/>
+                                            </svg>
+                                        </div>
                                     </div>
-                                </div> 
-                                <div class="dot-box">
-                                    <div class="dot">
-                                        <svg width="4" height="14" viewBox="0 0 4 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M3.5 2.1001C3.5 2.92852 2.82843 3.6001 2 3.6001C1.17157 3.6001 0.5 2.92852 0.5 2.1001C0.5 1.27167 1.17157 0.600098 2 0.600098C2.82843 0.600098 3.5 1.27167 3.5 2.1001Z" fill="#F1F3F4"/>
-                                            <path d="M3.5 7.1001C3.5 7.92852 2.82843 8.6001 2 8.6001C1.17157 8.6001 0.5 7.92852 0.5 7.1001C0.5 6.27167 1.17157 5.6001 2 5.6001C2.82843 5.6001 3.5 6.27167 3.5 7.1001Z" fill="#F1F3F4"/>
-                                            <path d="M3.5 12.1001C3.5 12.9285 2.82843 13.6001 2 13.6001C1.17157 13.6001 0.5 12.9285 0.5 12.1001C0.5 11.2717 1.17157 10.6001 2 10.6001C2.82843 10.6001 3.5 11.2717 3.5 12.1001Z" fill="#F1F3F4"/>
-                                        </svg>
+                                    <div class="address-box">
+                                        <div class="address">
+                                            <span>
+                                                <svg width="8" height="11" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M4 0C2.61929 0 1.5 1.11929 1.5 2.5V3.5H1C0.447715 3.5 0 3.94772 0 4.5V9.5C0 10.0523 0.447715 10.5 1 10.5H7C7.55228 10.5 8 10.0523 8 9.5V4.5C8 3.94772 7.55228 3.5 7 3.5H6.5V2.5C6.5 1.11929 5.38071 0 4 0ZM5.5 3.5V2.5C5.5 1.67157 4.82843 1 4 1C3.17157 1 2.5 1.67157 2.5 2.5V3.5H5.5Z" fill="#EAEAEA"/>
+                                                </svg>
+                                            </span>
+                                            <div class="address-target show">hyunjin912.github.io/portfolio/index.html</div>
+                                            <div class="address-target">hyunjin912.github.io/portfolio/index.css</div>
+                                            <div class="address-target">hyunjin912.github.io/portfolio/index.script</div>
+                                        </div>
+                                    </div> 
+                                    <div class="dot-box">
+                                        <div class="dot">
+                                            <svg width="4" height="14" viewBox="0 0 4 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M3.5 2.1001C3.5 2.92852 2.82843 3.6001 2 3.6001C1.17157 3.6001 0.5 2.92852 0.5 2.1001C0.5 1.27167 1.17157 0.600098 2 0.600098C2.82843 0.600098 3.5 1.27167 3.5 2.1001Z" fill="#F1F3F4"/>
+                                                <path d="M3.5 7.1001C3.5 7.92852 2.82843 8.6001 2 8.6001C1.17157 8.6001 0.5 7.92852 0.5 7.1001C0.5 6.27167 1.17157 5.6001 2 5.6001C2.82843 5.6001 3.5 6.27167 3.5 7.1001Z" fill="#F1F3F4"/>
+                                                <path d="M3.5 12.1001C3.5 12.9285 2.82843 13.6001 2 13.6001C1.17157 13.6001 0.5 12.9285 0.5 12.1001C0.5 11.2717 1.17157 10.6001 2 10.6001C2.82843 10.6001 3.5 11.2717 3.5 12.1001Z" fill="#F1F3F4"/>
+                                            </svg>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
