--- a/port/index4.html
+++ b/port/index4.html
@@ -32,7 +32,6 @@
             <div class="container">
                 <div class="row">
                     <div class="header">
-                    
                         <div class="header-title">
                             <h1 class="main-tit"><strong class="split">You can see dreams</strong><em class="split"> in my portfolio</em></h1>
                             <p class="sub-tit split">Thinking= Thinking + Thinking</p>
@@ -83,10 +82,12 @@
                     <h2 class="ftitle">webstandard</h2>
                     <h2 class="btitle">webstandard</h2>
                 </div>
-                <div class="sec1-img-wrap img-wrap">
-                    <div class="sec1-img img"
-                        data-700="left: 0px; transform: scale3d(1,1,1)"
-                        data-2300="left: 120px; transform: scale3d(1.24998,1.24998,1);"></div>
+                <div class="img-align-box">
+                    <div class="sec1-img-wrap img-wrap">
+                        <div class="sec1-img img"
+                            data-700="left: 0px; transform: scale3d(1,1,1)"
+                            data-2300="left: 120px; transform: scale3d(1.24998,1.24998,1);"></div>
+                    </div>
                 </div>
                 <div class="sec1-num-wrap left-num-wrap"
                     data-800="top: 18vw;"
@@ -117,7 +118,7 @@
                 
                 <div class="container codecontainer">
                     <div class="row">
-                        <div class="code-content">
+                        <div class="code-align-box">
                             <div class="circlebox">
                                 <a class="sec1-circleAll circle-wrap1 active2" href="#">
                                     <div class="sec1-circle1">view tap-move</div>
@@ -137,11 +138,62 @@
                                     <div class="editor-tab">
                                         <div class="dot"><span></span></div>
                                         <ul class="menu">
-                                            <li class="active"><a href="#">index.html</a></li>
-                                            <li><a href="#">style.css</a></li>
-                                            <li><a href="#">script.js</a></li>
+                                            <li>
+                                                <a class="active" href="#">index.html</a>
+                                                <div class="code-content">
+                                                    <pre class="line-numbers"><code class="language-html lh1"></code></pre>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <a href="#">style.css</a>
+                                                <div class="code-content">
+                                                    <pre class="line-numbers"><code class="language-css lc1"></code></pre>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <a href="#">script.js</a>
+                                                <div class="code-content">
+                                                    <pre class="line-numbers"><code class="language-js lj1"></code></pre>
+                                                </div>
+                                            </li>
                                         </ul>
-                                        <div class="theme">Theme <span class="arrow"></span></div>
+                                        <div class="theme">
+                                            <span class="current-theme">Theme</span>
+                                            <ul class="themelist">
+                                                <li class="theme-name">
+                                                    <a href="#">
+                                                        <span class="choice">
+                                                            <svg width="12" height="9" viewBox="0 0 12 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                                <path d="M1 4.5L4 7.5L10.5 1" stroke="#CFDBE4" stroke-width="1.5"/>
+                                                            </svg>
+                                                        </span> 
+                                                        Owl</a>
+                                                </li>
+                                                <li class="theme-name">
+                                                    <a href="#">
+                                                        <span class="choice">
+                                                            <svg width="12" height="9" viewBox="0 0 12 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                                <path d="M1 4.5L4 7.5L10.5 1" stroke="#CFDBE4" stroke-width="1.5"/>
+                                                            </svg>  
+                                                        </span> 
+                                                        Monokai</a>
+                                                </li>
+                                                <li class="theme-name">
+                                                    <a href="#"> 
+                                                        <span class="choice">
+                                                            <svg width="12" height="9" viewBox="0 0 12 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                                <path d="M1 4.5L4 7.5L10.5 1" stroke="#9fa2a5" stroke-width="1.5"/>
+                                                            </svg> 
+                                                        </span>
+                                                        Owl Light</a>
+                                                </li>
+                                            </ul> 
+                                            <a class="arrow">
+                                                <svg width="15" height="12" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <path d="M1 1.5L5 5.5L9 1.5" stroke-width="1.5"/>
+                                                </svg>
+                                            </a>
+                                        </div>
                                     </div>
                                     <div class="editor-code"></div>
                                 </div>
@@ -169,6 +221,7 @@
     <script src="js/skrollr.min.js"></script>
     <script src="js/custom2.js"></script>
 
+   
     <!-- <script>
         if (window.addEventListener) window.addEventListener('DOMMouseScroll', wheel, false);
 window.onmousewheel = document.onmousewheel = wheel;
